child routing and auth guard is complete

--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -35,6 +35,8 @@
           >
         </li>
       </ul>
+      <button class="btn btn-outline-success mx-3" (click)="logIn()">Log In</button>
+      <button class="btn btn-outline-danger" (click)="logOut()">Log Out</button>
     </div>
   </nav>
   
